--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -1,5 +1,4 @@
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: white;
-  background: black;
-}
+body 
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+  color: white
+  background: black
